OH-18 fix old fields
